<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xywebsolutions.app.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/background"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icon_2"
                android:id="@+id/imageView"
                android:layout_gravity="center"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@color/lightGrey">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/input_name"
                android:hint="@string/yourname"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:background="@drawable/bg_grey_border"
                android:singleLine="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/input_company"
                android:hint="@string/company"
                android:inputType="text"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:background="@drawable/bg_grey_border"
                android:singleLine="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/btnLogin"
                android:text="@string/letgo"
                android:textColor="@color/white"
                android:background="@drawable/bg_button"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
